--- a/app/src/main/res/layout/activity_update_account.xml
+++ b/app/src/main/res/layout/activity_update_account.xml
@@ -4,129 +4,233 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#F5F6F8"
     android:orientation="vertical"
-    tools:context=".activity.UpdateAccountActivity">
+    tools:context=".activity.AccoutActivity">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:orientation="vertical">
+        android:orientation="horizontal">
 
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginStart="12dp"
+            android:layout_marginTop="8dp"
+            android:src="@drawable/ic_vt_back_24" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="Chỉnh sửa thông Tin"
+            android:paddingEnd="30dp"
+            android:layout_marginTop="8dp"
+            android:text="Thông tin tài khoản"
             android:textColor="#000000"
-            android:textSize="24dp"
-            android:textStyle="bold" />
+            android:textSize="22sp"
+            android:fontFamily="@font/roboto_medium" />
     </LinearLayout>
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginTop="8dp"
             android:orientation="vertical">
+
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="210dp"
-                android:layout_marginTop="22dp"
-                android:background="#505050"
-                android:orientation="vertical">
+                android:layout_height="112dp"
+                android:background="@drawable/custom_gradient"
+                android:gravity="center_horizontal"/>
 
-                <com.google.android.material.imageview.ShapeableImageView
-                    android:layout_width="120dp"
-                    android:layout_height="120dp"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="30dp"
-                    android:src="@mipmap/ic_launcher_round"
-                    app:shapeAppearanceOverlay="@style/cilcle" />
+            <com.google.android.material.imageview.ShapeableImageView
+                android:layout_width="120dp"
+                android:layout_height="120dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="-95dp"
+                android:background="@color/white"
+                android:src="@drawable/ic_logo"
+                app:shapeAppearanceOverlay="@style/cilcle" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <TextView
+                    android:text="@string/thongtin"
+                    android:textColor="@color/black"
+                    android:textSize="14sp"
+                    android:layout_marginTop="32dp"
+                    android:layout_marginStart="12dp"
+                    android:fontFamily="@font/roboto_medium"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+                <TextView
+                    android:id="@+id/tv_account_update"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/roboto_regular"
+                    android:text="Chỉnh sửa"
+                    android:paddingEnd="24dp"
+                    android:layout_marginTop="32dp"
+                    android:gravity="end"
+                    android:textColor="#E4AB00"
+                    android:textSize="18sp"
+                    />
             </LinearLayout>
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@drawable/custom_account"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:layout_marginTop="14dp"
+                android:background="@color/white">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
 
-                    <TextView
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="25dp"
-                        android:layout_marginTop="36dp"
-                        android:backgroundTint="#000000"
-                        android:text="Họ và tên "
-                        android:textSize="18dp"
-                        android:textStyle="bold" />
+                        android:weightSum="10"
+                        android:paddingVertical="15dp"
+                        android:paddingHorizontal="12dp"
+                        android:orientation="horizontal">
 
-                    <EditText
-                        android:id="@+id/edt_update_account_username"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="25dp"
-                        android:layout_marginTop="5dp"
-                        android:hint="Nhập họ tên " />
+                        <TextView
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="3"
+                            android:backgroundTint="#A4A4A4 "
+                            android:fontFamily="@font/roboto_regular"
+                            android:text="Họ và tên"
+                            android:textSize="16sp" />
 
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="25dp"
-                        android:layout_marginTop="36dp"
-                        android:backgroundTint="#000000"
-                        android:text="Ngày sinh "
-                        android:textSize="18dp"
-                        android:textStyle="bold" />
+                        <TextView
+                            android:id="@+id/tv_account_nameuser"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="7"
+                            android:gravity="right"
+                            android:fontFamily="@font/roboto_regular"
+                            android:text="Bùi Phương Nam"
+                            android:textColor="#000000"
+                            android:textSize="18sp" />
 
-                    <EditText
-                        android:id="@+id/edt_update_account_birthday"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="25dp"
-                        android:layout_marginTop="5dp"
-                        android:hint="Nhập ngày sinh .... " />
 
-                    <TextView
+                    </LinearLayout>
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="2dp"
+                        android:layout_marginHorizontal="12dp"
+                        android:background="#F3EEEE" />
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="25dp"
-                        android:layout_marginTop="36dp"
-                        android:backgroundTint="#000000"
-                        android:text="Địa chỉ  "
-                        android:textSize="18dp"
-                        android:textStyle="bold" />
+                        android:orientation="horizontal"
+                        android:weightSum="10"
+                        android:paddingVertical="15dp"
+                        android:paddingHorizontal="12dp">
 
-                    <EditText
-                        android:id="@+id/edt_update_account_Adress"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="25dp"
-                        android:layout_marginTop="5dp"
-                        android:hint="Nhập địa chỉ  " />
+                        <TextView
 
-                    <TextView
-                        android:id="@+id/tvLuuthongtin"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="3"
+                            android:backgroundTint="#A4A4A4"
+                            android:fontFamily="@font/roboto_regular"
+                            android:text="Số điện thoại "
+                            android:textSize="16dp" />
+
+                        <TextView
+                            android:id="@+id/tv_account_phone"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="7"
+                            android:fontFamily="@font/roboto_regular"
+                            android:text="0388916736"
+                            android:gravity="right"
+                            android:textColor="#000000"
+                            android:textSize="18dp" />
+
+
+                    </LinearLayout>
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="2dp"
+                        android:layout_marginHorizontal="12dp"
+                        android:background="#F3EEEE" />
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="100dp"
-                        android:gravity="center_horizontal"
-                        android:fontFamily="@font/roboto"
-                        android:text="@string/txtluuthongtin"
-                        android:textColor="#505050"
-                        android:textSize="18sp"
-                        android:textStyle="bold" />
+                        android:weightSum="10"
+                        android:paddingVertical="15dp"
+                        android:paddingHorizontal="12dp"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/robotoregular"
+                            android:text="Ngày sinh"
+                            android:layout_weight="3"
+                            android:textSize="16sp" />
+
+                        <TextView
+                            android:id="@+id/tv_account_birthday"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="7"
+                            android:gravity="end"
+                            android:fontFamily="@font/robotoregular"
+                            android:text="22-01-2002"
+                            android:textColor="#000000"
+                            android:textSize="18sp" />
+
+
+                    </LinearLayout>
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="2dp"
+                        android:layout_marginHorizontal="12dp"
+                        android:background="#F3EEEE" />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:weightSum="10"
+                        android:paddingVertical="15dp"
+                        android:paddingHorizontal="12dp"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="3"
+                            android:fontFamily="@font/robotoregular"
+                            android:text="Địa chỉ"
+                            android:textSize="16sp" />
+
+                        <TextView
+                            android:id="@+id/tv_account_adress"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="7"
+                            android:gravity="end"
+                            android:fontFamily="@font/robotoregular"
+                            android:text="Số nhà 27 ngõ 86 phú kiều "
+                            android:textColor="#000000"
+                            android:textSize="18sp" />
+                    </LinearLayout>
+
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
-
     </ScrollView>
+
 </LinearLayout>
