--- a/app/src/main/res/layout/item_chondichvu.xml
+++ b/app/src/main/res/layout/item_chondichvu.xml
@@ -1,85 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:layout_height="match_parent"
-    android:layout_width="match_parent"
-    android:gravity="center"
-    >
-    <com.google.android.material.card.MaterialCardView
-        android:layout_height="296dp"
-        android:layout_width="171dp"
-        app:cardCornerRadius="10dp"
-        app:strokeColor="#8A8888"
-        app:strokeWidth="0.3dp">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        >
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:paddingHorizontal="5dp"
+    android:orientation="vertical">
 
-        <androidx.cardview.widget.CardView
+    <LinearLayout
+        android:layout_width="168dp"
+        android:layout_height="320dp"
+        android:orientation="vertical"
+        android:weightSum="10"
+        android:background="@drawable/custom_border_item">
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="128dp"
-            app:cardCornerRadius="10dp"
-            >
-            <ImageView
-                android:minHeight="171dp"
-                android:minWidth="128dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="9.3"
+            android:orientation="vertical">
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:cardCornerRadius="7dp">
+                <ImageView
+                    android:id="@+id/item_chondichvu_img"
+                    android:layout_width="match_parent"
+                    android:layout_height="128dp"
+                    android:minWidth="171dp"
+                    android:minHeight="128dp"
+                    android:src="@drawable/tocnamdep" />
+            </androidx.cardview.widget.CardView>
+
+            <TextView
+                android:id="@+id/item_chondichvu_tvName"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@drawable/tocnamdep"
-                android:id="@+id/item_chondichvu_img"
-                />
-        </androidx.cardview.widget.CardView>
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="#000000"
-            android:textSize="14dp"
-            android:fontFamily="@font/robotomedium"
-            android:textStyle="bold"
-            android:layout_marginTop="8dp"
-            android:text="Shine Combo cắt gội 10 bước "
-            android:layout_marginLeft="5dp"
-            android:id="@+id/item_chondichvu_tvName"
-            />
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="#757575"
-            android:textSize="14dp"
-            android:id="@+id/item_chondichvu_tvDesc"
-            android:layout_marginTop="8dp"
-            android:fontFamily="@font/robotoregular"
-            android:text="Đặc sắc nổi tiếng  "
-            android:layout_marginLeft="5dp"
-            />
-        <TextView
-            android:id="@+id/item_chondichvu_tvPrice"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="#000000"
-            android:textSize="14dp"
-            android:fontFamily="@font/robotomedium"
-            android:layout_marginTop="8dp"
-            android:text="100k  "
-            android:layout_marginLeft="5dp"
-            />
-                    <com.google.android.material.button.MaterialButton
-                        android:layout_width="153.81dp"
-                        android:layout_height="39dp"
-                        android:backgroundTint="#FFFFFF"
-                        android:text="Chọn"
-                        android:layout_marginTop="20dp"
-                        android:layout_gravity="center_horizontal"
-                        android:gravity="center"
-                        android:textColor="@color/black"
-                        app:strokeColor="@color/black"
-                        app:strokeWidth="1.5dp"
-                        app:cornerRadius="10dp"
-                        android:id="@+id/item_chondichvu_btn_chon"
-                       />
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="8dp"
+                android:fontFamily="@font/robotomedium"
+                android:text="Shine Combo cắt gội 10 bước "
+                android:textColor="#000000"
+                android:textSize="14dp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/item_chondichvu_tvDesc"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="8dp"
+                android:fontFamily="@font/robotoregular"
+                android:text="Đặc sắc nổi tiếng  "
+                android:textColor="#757575"
+                android:textSize="14dp" />
+
+            <TextView
+                android:id="@+id/item_chondichvu_tvPrice"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="8dp"
+                android:fontFamily="@font/robotomedium"
+                android:text="100k  "
+                android:textColor="#000000"
+                android:textSize="14dp" />
         </LinearLayout>
-    </com.google.android.material.card.MaterialCardView>
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/item_chondichvu_btn_chon"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight=".7"
+            android:layout_marginHorizontal="7dp"
+            android:backgroundTint="#FFFFFF"
+            android:text="Chọn"
+            android:fontFamily="@font/robotoregular"
+            android:textAllCaps="false"
+            android:textSize="14sp"
+            android:textColor="@color/black"
+            app:cornerRadius="3dp"
+            app:strokeColor="@color/black"
+            app:strokeWidth="1dp" />
+    </LinearLayout>
 </LinearLayout>
