--- a/app/src/main/res/layout/fragment_lichsucut.xml
+++ b/app/src/main/res/layout/fragment_lichsucut.xml
@@ -31,6 +31,7 @@
             android:textSize="24sp" />
     </LinearLayout>
     <androidx.cardview.widget.CardView
+        android:id="@+id/crv_lichsucut_null"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <LinearLayout
@@ -57,7 +58,7 @@
                 android:textColor="@color/black"
                 android:layout_marginTop="12dp"/>
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/buttonLogin"
+                android:id="@+id/btn_lichsucut_order"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="95dp"
