--- a/app/src/main/res/layout/activity_datlich.xml
+++ b/app/src/main/res/layout/activity_datlich.xml
@@ -175,6 +175,13 @@
                     android:layout_weight="1"
                     android:src="@drawable/ic_vt_arrow_24" />
             </LinearLayout>
+            <ListView
+                android:layout_marginTop="15dp"
+                android:id="@+id/lv_nameSV"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="30dp"
+                android:layout_marginEnd="24dp"/>
             <!--     CHON STYLIST           -->
 
             <TextView
@@ -249,6 +256,7 @@
                 android:textSize="18sp" />
 
             <LinearLayout
+                android:id="@+id/btn_datlich_calendar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingVertical="13dp"
@@ -259,7 +267,7 @@
                 android:background="@drawable/custom_corner_input">
 
                 <ImageView
-                    android:id="@+id/btn_datlich_calendar"
+
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
@@ -294,28 +302,28 @@
                 android:layout_marginRight="30dp" />
 
 
-<!--            <androidx.cardview.widget.CardView-->
-<!--                android:layout_width="369dp"-->
-<!--                android:layout_height="49dp"-->
-<!--                android:layout_gravity="center"-->
-<!--                android:layout_marginTop="50dp"-->
-<!--                android:backgroundTint="#939292"-->
-<!--                app:cardCornerRadius="10dp">-->
+            <!--            <androidx.cardview.widget.CardView-->
+            <!--                android:layout_width="369dp"-->
+            <!--                android:layout_height="49dp"-->
+            <!--                android:layout_gravity="center"-->
+            <!--                android:layout_marginTop="50dp"-->
+            <!--                android:backgroundTint="#939292"-->
+            <!--                app:cardCornerRadius="10dp">-->
 
-<!--                <Button-->
-<!--                    -->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:backgroundTint="#939292"-->
-<!--                    android:background="@drawable/custom_corner_input"-->
-<!--                    android:fontFamily="@font/robotomedium"-->
-<!--                    android:text="Hoàn Tất"-->
-<!--                    android:textColor="@color/black"-->
-<!--                    android:textSize="24dp"-->
-<!--                    android:textStyle="bold" />-->
-<!--               -->
+            <!--                <Button-->
+            <!--                    -->
+            <!--                    android:layout_width="match_parent"-->
+            <!--                    android:layout_height="wrap_content"-->
+            <!--                    android:backgroundTint="#939292"-->
+            <!--                    android:background="@drawable/custom_corner_input"-->
+            <!--                    android:fontFamily="@font/robotomedium"-->
+            <!--                    android:text="Hoàn Tất"-->
+            <!--                    android:textColor="@color/black"-->
+            <!--                    android:textSize="24dp"-->
+            <!--                    android:textStyle="bold" />-->
+            <!--               -->
 
-<!--            </androidx.cardview.widget.CardView>-->
+            <!--            </androidx.cardview.widget.CardView>-->
 
 
         </LinearLayout>
